eulogy-derive/tests/ui/after_references_skipped_field.stderr
error: field `child` is skipped or unannotated — it cannot appear in an `after` list
  --> tests/ui/after_references_skipped_field.rs:13:23
   |
13 |     #[eulogy(after = [child])]
   |                       ^^^^^
